--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.2",
     "@hookform/resolvers": "^5.2.1",
+    "@iconify/tools": "^4.1.2",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
@@ -17,11 +19,13 @@
     "@react-email/components": "^0.5.1",
     "@react-email/render": "^1.2.1",
     "@tanstack/react-query": "^5.85.5",
+    "bcrypt": "^6.0.0",
     "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hono": "^4.9.2",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.12",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
