--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "prettier": "^3.6.2",
+    "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.14.0",
     "tailwindcss": "^4",
