--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
     "@hono/zod-validator": "^0.7.2",
     "@hookform/resolvers": "^5.2.1",
     "@iconify/tools": "^4.1.2",
@@ -34,6 +37,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "fullcalendar": "^6.1.19",
     "hamburger-react": "^2.5.2",
     "hono": "^4.9.2",
     "lucide-react": "^0.540.0",
