--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hono/zod-validator": "^0.7.2",
     "@hookform/resolvers": "^5.2.1",
     "@iconify/tools": "^4.1.2",
+    "@midudev/tailwind-animations": "^0.2.0",
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -33,6 +34,8 @@
     "@react-email/components": "^0.5.1",
     "@react-email/render": "^1.2.1",
     "@tanstack/react-query": "^5.85.5",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.1",
@@ -53,6 +56,7 @@
     "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animated": "^2.0.0",
     "zod": "^4.1.0"
   },
   "devDependencies": {
