--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animated": "^2.0.0",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.1.0"
   },
   "devDependencies": {
